--- a/about.html
+++ b/about.html
@@ -3,6 +3,7 @@
 	<head>
 		<title>winmarche - about</title>
 		<link rel="stylesheet" type="text/css" href="css/content.css">
+		<link href='http://fonts.googleapis.com/css?family=Open+Sans:300' rel='stylesheet' type='text/css'>
 	</head>
 
 	<body>
