--- a/projects.html
+++ b/projects.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>winmarche - projects</title>
+		<title>winston mark cheng - projects</title>
 		<link rel="stylesheet" type="text/css" href="css/content.css">
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans:300' rel='stylesheet' type='text/css'>
 	</head>
 
 	<body>
 		<header>
-			<h1><a href="index.html">win<span style='color:#00CCFF'>mar</span><span style='color:gray'>che</span></a></h1>
+			<h1><a href="index.html">winston<span style='color:#00CCFF'>mark</span><span style='color:gray'>cheng</span></a></h1>
 		</header>
 
 		<nav>
@@ -27,14 +27,14 @@
 
 				<ul id='list'>
 					<li>
-						<a href="https://winmarche.github.io/">win<span style='color:#00CCFF'>mar</span><span style='color:gray'>che</span></a> | <p>My personal website</p>
+						<a href="https://winmarche.github.io/" style='font-size:50%'>winston<span style='color:#00CCFF'>mark</span><span style='color:gray'>cheng</span></a> | <p>My personal website</p>
 					</li>
 				</ul>
 			</div>
 		</div>
 
 		<footer>
-			<p>&copy2014 winmarche</p>
+			<p>&copy2015 winston mark cheng</p>
 		</footer>
 	</body>
 </html>
