--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>winmarche - home</title>
+		<title>winston mark cheng - home</title>
 		<link rel="stylesheet" type="text/css" href="css/home.css">
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans:300' rel='stylesheet' type='text/css'>
 	</head>
 
 	<body>
 		<header>
-			<h1><a href="index.html">win<span style='color:#00CCFF'>mar</span><span style='color:gray'>che</span></a></h1>
+			<h1><a href="index.html">winston<span style='color:#00CCFF'>mark</span><span style='color:gray'>cheng</span></a></h1>
 		</header>
 
 		<div id='content'>
@@ -21,7 +21,7 @@
 		</div>
 
 		<footer>
-			<p>&copy2014 winmarche</p>
+			<p>&copy2015 winston mark cheng</p>
 		</footer>
 	</body>
 </html>
