--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<meta charset="utf-8">
 		<title>winston mark cheng - home</title>
+		<meta name="description" content="Winston Mark Cheng's Personal Website">
+		<meta name="keywords" content="winmarche,winston,mark,cheng,personal,website,site,page,IT,student,mobile,web,projects,development">
 		<link rel="stylesheet" type="text/css" href="css/home.css">
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans:300' rel='stylesheet' type='text/css'>
 	</head>
