--- a/projects.html
+++ b/projects.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<meta charset="utf-8">
 		<title>winston mark cheng - projects</title>
 		<link rel="stylesheet" type="text/css" href="css/content.css">
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans:300' rel='stylesheet' type='text/css'>
