--- a/about.html
+++ b/about.html
@@ -54,7 +54,7 @@
 		</div>
 
 		<footer>
-			<p>&copy2015 winston mark cheng</p>
+			<p>&copy;2015 winston mark cheng</p>
 		</footer>
 	</body>
 </html>
