--- a/about.html
+++ b/about.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<title>winston mark cheng - about</title>
+		<meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0;">
 		<link rel="stylesheet" type="text/css" href="css/content.css">
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans:300' rel='stylesheet' type='text/css'>
 	</head>
@@ -25,16 +26,12 @@
 			
 			<div class='object'>
 				<h3>Who am I?</h3>
-				<div id='desc'>
+				<div class='desc'>
 					<p>Hi there, I'm Winston.</p>
 					<p>
-						I'm currently a student studying at RMIT University, trying to get through the
-						Bachelor of Information Technology.
-					</p>
-					<p>
-						I have a very huge interest in the technological world, particularly in the web
-						and mobile areas. I hope to be able to create some pretty neat stuff for these
-						platforms as little projects and see how I go.
+						I am someone with a very huge interest in the technological world, particularly
+						in the web and mobile areas. I hope to be able to create some pretty neat stuff
+						for these platforms.
 					</p>
 					<p>
 						I'm also hoping that I can get myself into the IT industry and make something
@@ -42,6 +39,90 @@
 						goal in life.
 					</p>
 				</div>
+
+				<h3>Tech Skills</h3>
+				<div class="desc">
+					<h4>Programming Languages</h4>
+					<ul>
+						<li>Visual Basic</li>
+						<li>Java</li>
+						<li>PHP</li>
+						<li>Python</li>
+						<li>Javascript</li>
+						<li>Perl</li>
+						<li>Swift</li>
+						<li>C#</li>
+					</ul>
+
+					<h4>Other Languages</h4>
+					<ul>
+						<li>HTML</li>
+						<li>XML</li>
+						<li>CSS</li>
+						<li>SQL</li>
+					</ul>
+
+					<h4>Operating Systems</h4>
+					<ul>
+						<li>Windows</li>
+						<li>OS X</li>
+						<li>iOS</li>
+						<li>Linux (Ubuntu, Fedora, Android)</li>
+					</ul>
+
+					<h4>IDEs</h4>
+					<ul>
+						<li>Adobe Dreamweaver</li>
+						<li>Visual Studio</li>
+						<li>Eclipse</li>
+						<li>Xcode</li>
+						<li>NetBeans</li>
+						<li>Android Studio</li>
+					</ul>
+
+					<h4>Text Editors</h4>
+					<ul>
+						<li>Notepad</li>
+						<li>Programmer's Notepad</li>
+						<li>Notepad++</li>
+						<li>gedit</li>
+						<li>Sublime Text</li>
+						<li>nano</li>
+						<li>Vim</li>
+						<li>GNU Emacs</li>
+					</ul>
+
+					<h4>Other</h4>
+					<ul>
+						<li>GitHub</li>
+						<li>Bootstrap</li>
+						<li>three.js</li>
+						<li>Chart.js</li>
+						<li>AngularJS</li>
+						<li>Oracle Database</li>
+						<li>Apache Server</li>
+						<li>Microsoft Office</li>
+						<li>Microsoft SQL Server</li>
+						<li>J2EE</li>
+						<li>Microsoft .NET</li>
+						<li>Spring</li>
+					</ul>
+				</div>
+
+				<h3>Education</h3>
+					<div class='desc'>
+						<h4>RMIT University</h4>
+						<ul>
+							<li>
+								Bachelor of Information Technology<br>
+								2013 - 2015
+							</li>
+							<li>
+								Diploma of Information Technology<br>
+								2012
+							</li>
+						</ul>
+					</div>
 			</div>
 
 			<div class='object'>
