--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		<title>winston mark cheng - home</title>
 		<meta name="description" content="Winston Mark Cheng's Personal Website">
 		<meta name="keywords" content="winmarche,winston,mark,cheng,personal,website,site,page,IT,student,mobile,web,projects,development">
+		<meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0;">
 		<link rel="stylesheet" type="text/css" href="css/home.css">
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans:300' rel='stylesheet' type='text/css'>
 	</head>
@@ -15,7 +16,7 @@
 		</header>
 
 		<div id='content'>
-			<p>//It all begins with an idea...</p>
+			<code>//It all begins with an idea...</code>
 
 			<nav>
 				<a href="projects.html">projects</a>
