--- a/projects.html
+++ b/projects.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<title>winston mark cheng - projects</title>
+		<meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0;">
 		<link rel="stylesheet" type="text/css" href="css/content.css">
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans:300' rel='stylesheet' type='text/css'>
 	</head>
