--- a/index.html
+++ b/index.html
@@ -1,18 +1,25 @@
 <!DOCTYPE html>
 <html>
+	<script>
+		if(window.location.protocol != "https:")
+		{
+			window.location.protocol = "https";
+		}
+	</script>
+	
 	<head>
 		<meta charset="utf-8">
 		<title>winston mark cheng - home</title>
 		<meta name="description" content="Winston Mark Cheng's Personal Website">
 		<meta name="keywords" content="winmarche,winston,mark,cheng,personal,website,site,page,IT,student,mobile,web,projects,development">
-		<meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0;">
+		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
 		<link rel="stylesheet" type="text/css" href="css/home.css">
-		<link href='http://fonts.googleapis.com/css?family=Open+Sans:300' rel='stylesheet' type='text/css'>
+		<link href='https://fonts.googleapis.com/css?family=Open+Sans:300' rel='stylesheet' type='text/css'>
 	</head>
 
 	<body>
 		<header>
-			<h1><a href="index.html">winston<span style='color:#00CCFF'>mark</span><span style='color:gray'>cheng</span></a></h1>
+			<a href="index.html"><img id="logo" src="images/logo.png" alt="winstonmarkcheng"/></a>
 		</header>
 
 		<div id='content'>
@@ -25,7 +32,7 @@
 		</div>
 
 		<footer>
-			<p>&copy;2015 winston mark cheng</p>
+			<p>&copy;<script>document.write(new Date().getFullYear())</script> winston mark cheng</p>
 		</footer>
 	</body>
 </html>
