--- a/index.html
+++ b/index.html
@@ -1,17 +1,13 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<script>
-			if(window.location.protocol != "https:")
-			{
-				window.location.protocol = "https";
-			}
-		</script>
+		<script type="text/javascript" src="js/utilities.js"></script>
 		<meta charset="utf-8">
 		<title>winston mark cheng - home</title>
 		<meta name="description" content="Winston Mark Cheng's Personal Website">
 		<meta name="keywords" content="winmarche,winston,mark,cheng,personal,website,site,page,IT,student,mobile,web,projects,development">
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
+		<meta name="google-site-verification" content="YKMcQF7raEZpamDi8wWbabxQUjgs8Fvm1VvKCWQAu24">
 		<link rel="stylesheet" type="text/css" href="css/home.css">
 		<link href='https://fonts.googleapis.com/css?family=Open+Sans:300' rel='stylesheet' type='text/css'>
 	</head>
@@ -31,7 +27,7 @@
 		</div>
 
 		<footer>
-			<p>&copy;<script>document.write(new Date().getFullYear())</script> winston mark cheng</p>
+			<p>&copy;<script>showYear();</script> winston mark cheng</p>
 		</footer>
 	</body>
 </html>
