--- a/projects.html
+++ b/projects.html
@@ -1,14 +1,10 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<script>
-			if(window.location.protocol != "https:")
-			{
-				window.location.protocol = "https";
-			}
-		</script>
+		<script type="text/javascript" src="js/utilities.js"></script>
 		<meta charset="utf-8">
 		<title>winston mark cheng - projects</title>
+		<meta name="description" content="Winston Mark Cheng's Projects">
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
 		<link rel="stylesheet" type="text/css" href="css/content.css">
 		<link href='https://fonts.googleapis.com/css?family=Open+Sans:300' rel='stylesheet' type='text/css'>
@@ -43,7 +39,7 @@
 		</div>
 
 		<footer>
-			<p>&copy;<script>document.write(new Date().getFullYear())</script> winston mark cheng</p>
+			<p>&copy;<script>showYear();</script> winston mark cheng</p>
 		</footer>
 	</body>
 </html>
