--- a/about.html
+++ b/about.html
@@ -1,14 +1,10 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<script>
-			if(window.location.protocol != "https:")
-			{
-				window.location.protocol = "https";
-			}
-		</script>
+		<script type="text/javascript" src="js/utilities.js"></script>
 		<meta charset="utf-8">
 		<title>winston mark cheng - about</title>
+		<meta name="description" content="Winston Mark Cheng's Personal Website">
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
 		<link rel="stylesheet" type="text/css" href="css/content.css">
 		<link href='https://fonts.googleapis.com/css?family=Open+Sans:300' rel='stylesheet' type='text/css'>
@@ -35,14 +31,9 @@
 				<div class='desc'>
 					<p>Hi there, I'm Winston.</p>
 					<p>
-						I am someone with a very huge interest in the technological world, particularly
-						in the web and mobile areas. I hope to be able to create some pretty neat stuff
-						for these platforms.
-					</p>
-					<p>
-						I'm also hoping that I can get myself into the IT industry and make something
-						big and perhaps, contribute into society in some way... This would be my main
-						goal in life.
+						I am someone who is passionate about technology, especially when it comes to
+						the web and mobile tech. I like to make things for these platforms and
+						contribute to society this way.
 					</p>
 				</div>
 
@@ -141,7 +132,7 @@
 		</div>
 
 		<footer>
-			<p>&copy;	<script>document.write(new Date().getFullYear())</script> winston mark cheng</p>
+			<p>&copy;<script>showYear();</script> winston mark cheng</p>
 		</footer>
 	</body>
 </html>
