--- a/about.html
+++ b/about.html
@@ -41,7 +41,6 @@
 				<div class="desc">
 					<h4>Programming Languages</h4>
 					<ul>
-						<li>Visual Basic</li>
 						<li>Java</li>
 						<li>PHP</li>
 						<li>Python</li>
@@ -69,7 +68,6 @@
 
 					<h4>IDEs</h4>
 					<ul>
-						<li>Adobe Dreamweaver</li>
 						<li>Visual Studio</li>
 						<li>Eclipse</li>
 						<li>Xcode</li>
@@ -80,29 +78,26 @@
 					<h4>Text Editors</h4>
 					<ul>
 						<li>Notepad</li>
-						<li>Programmer's Notepad</li>
 						<li>Notepad++</li>
 						<li>gedit</li>
 						<li>Sublime Text</li>
 						<li>nano</li>
 						<li>Vim</li>
-						<li>GNU Emacs</li>
 					</ul>
 
 					<h4>Other</h4>
 					<ul>
 						<li>GitHub</li>
 						<li>Bootstrap</li>
-						<li>three.js</li>
+						<li>jQuery</li>
 						<li>Chart.js</li>
-						<li>AngularJS</li>
-						<li>Oracle Database</li>
+						<li>Angular</li>
 						<li>Apache Server</li>
 						<li>Microsoft Office</li>
+						<li>LibreOffice</li>
 						<li>Microsoft SQL Server</li>
 						<li>J2EE</li>
 						<li>Microsoft .NET</li>
-						<li>Spring</li>
 					</ul>
 				</div>
 
