--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<meta charset="utf-8">
 		<title>winston mark cheng - home</title>
 		<meta name="description" content="Winston Mark Cheng's Personal Website">
-		<meta name="keywords" content="winmarche,winston,mark,cheng,personal,website,site,page,IT,student,mobile,web,projects,development">
+		<meta name="keywords" content="winmarche,winston,mark,cheng,personal,website,site,page,IT,mobile,web,projects,development">
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
 		<meta name="google-site-verification" content="YKMcQF7raEZpamDi8wWbabxQUjgs8Fvm1VvKCWQAu24">
 		<link rel="stylesheet" type="text/css" href="css/home.css">
