--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 	<head>
 		<script type="text/javascript" src="js/utilities.js"></script>
 		<meta charset="utf-8">
-		<title>winston mark cheng - home</title>
-		<meta name="description" content="Winston Mark Cheng's Personal Website">
-		<meta name="keywords" content="winmarche,winston,mark,cheng,personal,website,site,page,IT,mobile,web,projects,development">
+		<title>Winston Cheng : Home</title>
+		<meta name="description" content="Winston Cheng's Personal Website">
+		<meta name="keywords" content="winmarche,winston,cheng,personal,website,site,page,IT,mobile,web,projects,development">
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
 		<meta name="google-site-verification" content="YKMcQF7raEZpamDi8wWbabxQUjgs8Fvm1VvKCWQAu24">
 		<link rel="stylesheet" type="text/css" href="css/home.css">
@@ -14,20 +14,19 @@
 
 	<body>
 		<header>
-			<a href="index.html"><img id="logo" src="images/logo.png" alt="winstonmarkcheng"/></a>
+			<h1><a href="index.html">Winston Cheng</a></h1>
 		</header>
 
 		<div id='content'>
-			<code>//It all begins with an idea...</code>
-
 			<nav>
-				<a href="projects.html">projects</a>
-				<a href="about.html">about</a>
+				<a href="projects.html">Projects</a>
+				<a target="_blank" href="https://github.com/winmarche/"><img id="logo" src="images/github.png" alt="GitHub"/></a>
+				<a id="email" href="mailto:winstoncheng55@gmail.com">@</a>
 			</nav>
 		</div>
 
 		<footer>
-			<p>&copy;<script>showYear();</script> winston mark cheng</p>
+			<p>&copy;<script>showYear();</script> Winston Cheng</p>
 		</footer>
 	</body>
 </html>
