--- a/projects.html
+++ b/projects.html
@@ -3,8 +3,8 @@
 	<head>
 		<script type="text/javascript" src="js/utilities.js"></script>
 		<meta charset="utf-8">
-		<title>winston mark cheng - projects</title>
-		<meta name="description" content="Winston Mark Cheng's Projects">
+		<title>Winston Cheng : Projects</title>
+		<meta name="description" content="Winston Cheng's Projects">
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
 		<link rel="stylesheet" type="text/css" href="css/content.css">
 		<link href='https://fonts.googleapis.com/css?family=Open+Sans:300' rel='stylesheet' type='text/css'>
@@ -12,38 +12,28 @@
 
 	<body>
 		<header>
-			<a href="index.html"><img id="logo" src="images/logo.png" alt="winstonmarkcheng"/></a>
+			<h1><a href="index.html">< Winston Cheng</a></h1>
 		</header>
 
-		<nav>
-			<ul id='navigation'>
-				<li><a href="index.html">home</a></li>
-				<li><a href="projects.html">projects</a></li>
-				<li><a href="about.html">about</a></li>
-			</ul>
-		</nav>
-
 		<div id='content'>	
-			<h2>projects</h2>
+			<h2>Projects</h2>
 			
 			<div class='object'>
-				<p>Projects that I've worked on:</p>
-
 				<ul id='list'>
 					<li>
-						<a href="index.html"><img src="images/logo.png" alt="winstonmarkcheng"/></a>
+						<a href="index.html">Winston Cheng</a>
 						<p>My personal website</p>
 					</li>
 					<li>
 						<a href="https://winmarche.github.io/bascatrack/">Bascatrack</a>
-						<p>A BASic CAll TRACKer to track your stats in a call centre position</p>
+						<p>A BASic CAll TRACKer to track your stats for the day as a contact centre agent</p>
 					</li>
 				</ul>
 			</div>
 		</div>
 
 		<footer>
-			<p>&copy;<script>showYear();</script> winston mark cheng</p>
+			<p>&copy;<script>showYear();</script> Winston Cheng</p>
 		</footer>
 	</body>
 </html>
